--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="navBar_background">#1a1a48</color>
+    <color name="toolbar_background">#bebebe</color>
 </resources>
