"toggle button layout adjusted"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:background="@color/toolbar_background"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -80,6 +81,7 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="clip_horizontal"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="16dp"
             android:layout_weight="0"
