--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:orientation="horizontal"
@@ -33,7 +25,8 @@
             android:backgroundTint="@color/white"
             android:contentDescription="@string/contactsRes"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/contacts" />
+            app:srcCompat="@drawable/contacts"
+            tools:ignore="RedundantDescriptionCheck" />
 
         <ImageButton
             android:id="@+id/mapButton"
@@ -43,7 +36,8 @@
             android:backgroundTint="@color/white"
             android:contentDescription="@string/mapRes"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/map" />
+            app:srcCompat="@drawable/map"
+            tools:ignore="RedundantDescriptionCheck" />
 
         <ImageButton
             android:id="@+id/settingsButton"
@@ -53,7 +47,8 @@
             android:backgroundTint="@color/white"
             android:contentDescription="@string/settingsRes"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/settings" />
+            app:srcCompat="@drawable/settings"
+            tools:ignore="RedundantDescriptionCheck" />
     </LinearLayout>
 
     <LinearLayout
@@ -89,6 +84,76 @@
             tools:ignore="HardcodedText" />
 
     </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollViiew"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toggleLayout">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textContact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Contact:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/editName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:ems="14"
+                android:inputType="textPersonName"
+                android:hint="Name"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textContact"
+                android:imeOptions="actionNext"
+                tools:ignore="HardcodedText" />
+
+                <requestFocus />
+
+            <TextView
+                android:id="@+id/textAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Address:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editName"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/editAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:ems="16"
+                android:inputType="textPersonName"
+                android:hint="Enter Street Address"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textAddress"
+                android:imeOptions="actionNext"
+                tools:ignore="HardcodedText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
