--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -237,15 +237,14 @@
                 android:id="@+id/editCell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="56dp"
                 android:ems="8"
                 android:imeOptions="actionNext"
                 android:inputType="phone"
                 android:maxLength="14"
                 android:nextFocusDown="@id/editEMail"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textCell"
-                tools:layout_editor_absoluteY="273dp" />
+                app:layout_constraintTop_toBottomOf="@+id/textCell" />
 
             <TextView
                 android:id="@+id/textEMail"
@@ -270,6 +269,42 @@
                 android:inputType="textEmailAddress"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textEMail"/>
+
+            <TextView
+                android:id="@+id/textBday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:text="Birthday:"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/editEMail"
+                 />
+
+            <TextView
+                android:id="@+id/textBirthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="24dp"
+                android:hint="MM/DD/YYYY"
+                app:layout_constraintTop_toBottomOf="@id/editEMail"
+                app:layout_constraintStart_toEndOf="@id/textBday"
+                tools:layout_editor_absoluteX="78dp"
+                tools:layout_editor_absoluteY="427dp" />
+
+            <Button
+                android:id="@+id/btnBirthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="60dp"
+                android:layout_marginEnd="60dp"
+                android:text="Change"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
