--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="navBar_background">#1a1a48</color>
     <color name="toolbar_background">#bebebe</color>
+    <color name="dialog_button_color">#26C6DA</color>
 </resources>
