--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="16dp"
             android:layout_weight="0"
-            android:text="Button"
+            android:text="Save"
             tools:ignore="HardcodedText" />
 
     </LinearLayout>
@@ -195,7 +195,7 @@
                 android:hint="Zipcode:"
                 android:imeOptions="actionNext"
                 android:inputType="number"
-                android:nextFocusDown="@id/editHome"
+                android:nextFocusDown="@id/editPhone"
                 app:layout_constraintStart_toEndOf="@+id/editState"
                 app:layout_constraintTop_toBottomOf="@+id/editAddress" />
 
@@ -211,7 +211,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editCity" />
 
             <EditText
-                android:id="@+id/editHome"
+                android:id="@+id/editPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -230,7 +230,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="16dp"
                 android:text="Cell Phone:"
-                app:layout_constraintStart_toEndOf="@id/editHome"
+                app:layout_constraintStart_toEndOf="@id/editPhone"
                 app:layout_constraintTop_toBottomOf="@id/editCity" />
 
             <EditText
@@ -255,7 +255,7 @@
                 android:layout_marginTop="16dp"
                 android:text="Email Address:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editHome"/>
+                app:layout_constraintTop_toBottomOf="@id/editPhone"/>
 
             <EditText
                 android:id="@+id/editEMail"
