--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="navBar_background">#1a1a48</color>
     <color name="toolbar_background">#bebebe</color>
     <color name="dialog_button_color">#26C6DA</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3F51B5</color>
 </resources>
