--- a/app/src/main/res/layout/activity_contact_map.xml
+++ b/app/src/main/res/layout/activity_contact_map.xml
@@ -6,4 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".ContactMapActivity">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="@color/navBar_background"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/contactsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/contactsRes"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/contacts"
+            tools:ignore="RedundantDescriptionCheck" />
+
+        <ImageButton
+            android:id="@+id/mapButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/mapRes"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/map"
+            tools:ignore="RedundantDescriptionCheck" />
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/settingsRes"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/settings"
+            tools:ignore="RedundantDescriptionCheck" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
