--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".MainActivity">
 
 
@@ -57,8 +58,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/toolbar_background"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -256,7 +257,7 @@
                 android:layout_marginTop="16dp"
                 android:text="Email Address:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editPhone"/>
+                app:layout_constraintTop_toBottomOf="@id/editPhone" />
 
             <EditText
                 android:id="@+id/editEMail"
@@ -269,7 +270,7 @@
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textEMail"/>
+                app:layout_constraintTop_toBottomOf="@id/textEMail" />
 
             <TextView
                 android:id="@+id/textBday"
@@ -280,8 +281,7 @@
                 android:layout_marginTop="24dp"
                 android:text="Birthday:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editEMail"
-                 />
+                app:layout_constraintTop_toBottomOf="@id/editEMail" />
 
             <TextView
                 android:id="@+id/textBirthday"
@@ -291,8 +291,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="24dp"
                 android:text="01/01/1970"
-                app:layout_constraintTop_toBottomOf="@id/editEMail"
                 app:layout_constraintStart_toEndOf="@id/textBday"
+                app:layout_constraintTop_toBottomOf="@id/editEMail"
                 tools:layout_editor_absoluteX="78dp"
                 tools:layout_editor_absoluteY="427dp" />
 
@@ -300,12 +300,11 @@
                 android:id="@+id/btnBirthday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="60dp"
                 android:layout_marginEnd="60dp"
+                android:layout_marginRight="60dp"
                 android:text="Change"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
-                />
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
