--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="dialog_button_color">#26C6DA</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorPrimary">#3F51B5</color>
+    <color name="system_red">#ff0000</color>
+    <color name="system_transparent"> #00000000</color>
+    <color name="system_blue">#0000ff</color>
+
 </resources>
