--- a/app/src/main/res/layout/simple_item_view.xml
+++ b/app/src/main/res/layout/simple_item_view.xml
@@ -9,6 +9,9 @@
         android:id="@+id/textViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:visibility="visible"
         android:text="TextView" />
+
+
+
 </LinearLayout>
