--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="system_red">#ff0000</color>
     <color name="system_transparent"> #00000000</color>
     <color name="system_blue">#0000ff</color>
+    <color name="button_gray">#808080</color>
 
 </resources>
