--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -38,6 +38,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/textBatteryLv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:hint="100%"
+            app:layout_constraintBaseline_toBaselineOf="@+id/switchDelete"
+            app:layout_constraintEnd_toStartOf="@+id/buttonAddContact"
+            app:layout_constraintStart_toEndOf="@+id/switchDelete"
+            tools:layout_editor_absoluteY="10dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
