--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
     </LinearLayout>
 
     <ScrollView
-        android:id="@+id/scrollViiew"
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
@@ -306,6 +306,17 @@
                 android:text="Change"
                 app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageButton
+                android:id="@+id/imgContact"
+                android:layout_width="88dp"
+                android:layout_height="105dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/editAddress"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textContact"
+                android:scaleType="fitCenter"
+                tools:srcCompat="@drawable/photoicon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
