--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,8 +96,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggleLayout">
+        app:layout_constraintTop_toBottomOf="@+id/toggleLayout"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -312,10 +314,11 @@
                 android:layout_width="88dp"
                 android:layout_height="105dp"
                 android:layout_marginEnd="8dp"
+                android:scaleType="fitCenter"
                 app:layout_constraintBottom_toTopOf="@+id/editAddress"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textContact"
-                android:scaleType="fitCenter"
+                tools:layout_editor_absoluteY="22dp"
                 tools:srcCompat="@drawable/photoicon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
