--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -27,7 +27,8 @@
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textContactName" />
+        app:layout_constraintTop_toBottomOf="@+id/textContactName"
+        app:layout_constraintVertical_bias="0.086" />
 
     <Button
         android:id="@+id/buttonDeleteContact"
